[gd_scene load_steps=27 format=3 uid="uid://84qmbyy12hoi"]

[ext_resource type="Theme" uid="uid://ctgv0x2t6xkc6" path="res://UI/free_ui_theme.tres" id="1_o2jkc"]
[ext_resource type="Script" uid="uid://4317v2mqkbjk" path="res://UI/stats.gd" id="2_2qbci"]
[ext_resource type="Script" uid="uid://hsdce8feoo5v" path="res://UI/compass.gd" id="3_ow1yt"]
[ext_resource type="Texture2D" uid="uid://d08hjcvwwwo47" path="res://UI/compass_nail.png" id="4_o2t6a"]
[ext_resource type="Script" uid="uid://bmg1xfdix0srf" path="res://UI/lost.gd" id="5_8gukh"]
[ext_resource type="Texture2D" uid="uid://bkp33ytifxc8y" path="res://UI/loss.png" id="6_2qbci"]
[ext_resource type="Script" uid="uid://cqn2vje3bld8f" path="res://UI/start_panel.gd" id="6_8gkfd"]
[ext_resource type="Script" uid="uid://dybwj42npbcym" path="res://UI/start.gd" id="7_0tr35"]
[ext_resource type="Script" uid="uid://d7wqpm15grcy" path="res://UI/time.gd" id="8_7j5ik"]
[ext_resource type="Script" uid="uid://dol6vlmwwr3ga" path="res://UI/car_stats_debug.gd" id="9_i1yd8"]
[ext_resource type="Script" uid="uid://dba4y85gilasm" path="res://UI/win_panel.gd" id="10_j5i65"]
[ext_resource type="Texture2D" uid="uid://b7btsnvvggr5n" path="res://UI/win.png" id="11_awqy2"]
[ext_resource type="Script" uid="uid://vcy7cw0cm6a1" path="res://UI/minimap.gd" id="12_8wcgx"]
[ext_resource type="Script" uid="uid://chi3x5cviupvi" path="res://UI/map_camera.gd" id="13_duqhi"]
[ext_resource type="Script" uid="uid://bq4hf7obe3cs4" path="res://UI/speed.gd" id="15_ow1yt"]
[ext_resource type="Script" uid="uid://38oupwjpwrur" path="res://UI/coins.gd" id="16_o2t6a"]
[ext_resource type="Script" uid="uid://cdk8argtawdwk" path="res://UI/which.gd" id="17_8gukh"]
[ext_resource type="PackedScene" uid="uid://cpg5wpqgb71y5" path="res://UI/card.tscn" id="18_8gkfd"]
[ext_resource type="Resource" uid="uid://ko7yxfdo88du" path="res://charachters/which_session.dtl" id="19_0tr35"]
[ext_resource type="Resource" uid="uid://qa1fokbry0ad" path="res://charachters/blessing_recieve.timeline.dtl" id="20_7j5ik"]
[ext_resource type="Script" uid="uid://cvjyconk08u2m" path="res://UI/which_intro.gd" id="21_i1yd8"]
[ext_resource type="Texture2D" uid="uid://5i87cwsfxk4x" path="res://intro/which_1.png" id="22_awqy2"]
[ext_resource type="Texture2D" uid="uid://dl6cf25a3j10w" path="res://intro/glow_out.png" id="23_8wcgx"]
[ext_resource type="Resource" uid="uid://dmjojbcjc6iqb" path="res://charachters/which_intro_timeline.dtl" id="24_8wcgx"]

[sub_resource type="Gradient" id="Gradient_82xsv"]
colors = PackedColorArray(0.93, 0.1488, 0.16182, 1, 1, 1, 0.31, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j5ik"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
layer = 0

[node name="Stats" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 24.0
offset_right = 344.0
offset_bottom = 120.0
theme = ExtResource("1_o2jkc")
script = ExtResource("2_2qbci")

[node name="HBoxContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Num" type="Label" parent="Stats/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Items" type="Label" parent="Stats/HBoxContainer"]
layout_mode = 2
text = "bottles delivered"

[node name="Minimap" type="SubViewportContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -153.0
offset_right = -35.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("12_8wcgx")

[node name="SubViewport" type="SubViewport" parent="Minimap"]
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Minimap/SubViewport"]
zoom = Vector2(0.1, 0.1)
script = ExtResource("13_duqhi")

[node name="Compass" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -58.0
offset_right = 60.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60, 60)
script = ExtResource("3_ow1yt")
color_transition = SubResource("Gradient_82xsv")

[node name="Nail" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -38.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("4_o2t6a")

[node name="Lost" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme = ExtResource("1_o2jkc")
script = ExtResource("5_8gukh")

[node name="Panel" type="Panel" parent="Lost"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -206.0
offset_right = 401.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Lost/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Woops! you lost!"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="Lost/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -70.5
offset_bottom = 46.5
grow_horizontal = 0
grow_vertical = 2
text = "You ran out of time!"
horizontal_alignment = 1

[node name="Repeat" type="Button" parent="Lost/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -49.0
offset_right = 114.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Play again"

[node name="TextureRect" type="TextureRect" parent="Lost/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -96.5
offset_right = 326.0
offset_bottom = 71.5
grow_vertical = 2
texture = ExtResource("6_2qbci")
expand_mode = 3
stretch_mode = 5

[node name="StartPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -149.0
offset_right = 217.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o2jkc")
script = ExtResource("6_8gkfd")

[node name="Start" type="Button" parent="StartPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.5
offset_top = -76.0
offset_right = 65.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "Start delivery!"
script = ExtResource("7_0tr35")

[node name="DayDescription" type="RichTextLabel" parent="StartPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 56.0
offset_right = 1.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
text = "10 bottles in
2 minutes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayTitle" type="Label" parent="StartPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.5
offset_top = 14.0
offset_right = 23.5
offset_bottom = 37.0
grow_horizontal = 2
text = "Day 1"

[node name="Time" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 31.0
offset_right = 91.0
offset_bottom = 80.0
grow_horizontal = 2
theme = ExtResource("1_o2jkc")
script = ExtResource("8_7j5ik")

[node name="Label" type="Label" parent="Time"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "120"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CarStatsDebug" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -478.0
offset_top = -156.0
offset_right = -219.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("9_i1yd8")

[node name="Label" type="Label" parent="CarStatsDebug"]
layout_mode = 0
offset_left = 22.0
offset_top = 8.0
offset_right = 93.0
offset_bottom = 31.0
text = "Impulse: "

[node name="Speed" type="Label" parent="CarStatsDebug"]
layout_mode = 0
offset_left = 22.0
offset_top = 31.0
offset_right = 74.0
offset_bottom = 54.0
text = "Speed:"

[node name="SpeedMultiplier" type="Label" parent="CarStatsDebug"]
layout_mode = 0
offset_left = 21.0
offset_top = 58.0
offset_right = 153.0
offset_bottom = 81.0
text = "Speed multiplier:"

[node name="mapTarget" type="Label" parent="CarStatsDebug"]
layout_mode = 0
offset_left = 19.0
offset_top = 81.0
offset_right = 139.0
offset_bottom = 104.0
text = "minimap target:"

[node name="WinPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -442.0
offset_top = -258.0
offset_right = 445.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o2jkc")
script = ExtResource("10_j5i65")

[node name="Title" type="Label" parent="WinPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Congrats!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Report" type="RichTextLabel" parent="WinPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -127.5
offset_right = 410.0
offset_bottom = -37.5
grow_vertical = 2
text = "Now everyone has their milk."
horizontal_alignment = 1

[node name="NextDay" type="Button" parent="WinPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.5
offset_top = -109.0
offset_right = 161.5
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue to next day"

[node name="SaveKey" type="Button" parent="WinPanel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.5
offset_top = -81.0
offset_right = 165.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
text = "Get a save key"

[node name="DayBeaten" type="HBoxContainer" parent="WinPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 31.0
offset_top = -0.5
offset_right = 370.0
offset_bottom = 43.5
grow_vertical = 2

[node name="num" type="Label" parent="WinPanel/DayBeaten"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "1"

[node name="Label" type="Label" parent="WinPanel/DayBeaten"]
layout_mode = 2
text = "Days beaten"

[node name="TextureRect" type="TextureRect" parent="WinPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -50.5
offset_right = -11.0
offset_bottom = 56.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("11_awqy2")

[node name="SaveKey" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 265.0
offset_top = 139.0
offset_right = -332.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2

[node name="Speed" type="ProgressBar" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -181.0
offset_bottom = -154.0
grow_horizontal = 0
grow_vertical = 0
max_value = 150.0
show_percentage = false
script = ExtResource("15_ow1yt")
coin_color = Color(0.8075, 0.85, 0, 1)

[node name="Label" type="Label" parent="Speed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinCheck" type="Timer" parent="Speed"]
wait_time = 0.5

[node name="Coins" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -232.0
offset_right = -88.0
offset_bottom = -192.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("16_o2t6a")

[node name="Label" type="Label" parent="Coins"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Coins:"

[node name="Which" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o2jkc")
script = ExtResource("17_8gukh")
card = ExtResource("18_8gkfd")
timeline = ExtResource("19_0tr35")
end_timeline = ExtResource("20_7j5ik")

[node name="Cards" type="HBoxContainer" parent="Which"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -117.0
offset_right = 188.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="WhichIntro" type="Panel" parent="Which"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7j5ik")
script = ExtResource("21_i1yd8")
slides = Array[Texture]([ExtResource("22_awqy2"), ExtResource("23_8wcgx")])
timeline = ExtResource("24_8wcgx")

[node name="Slide" type="TextureRect" parent="Which/WhichIntro"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("22_awqy2")
expand_mode = 3
stretch_mode = 5

[node name="Next" type="Button" parent="Which/WhichIntro"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -66.0
offset_right = -25.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="Full" type="Button" parent="Which/WhichIntro"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="Lost/Panel/Repeat" to="Lost" method="_on_repeat_pressed"]
[connection signal="pressed" from="StartPanel/Start" to="StartPanel" method="_on_start_pressed"]
[connection signal="timeout" from="Speed/CoinCheck" to="Speed" method="_on_coin_check_timeout"]
[connection signal="ended" from="Which/WhichIntro" to="WinPanel" method="_on_intro_ended"]
[connection signal="pressed" from="Which/WhichIntro/Next" to="Which/WhichIntro" method="_on_next_pressed"]
[connection signal="pressed" from="Which/WhichIntro/Full" to="Which/WhichIntro" method="_on_full_pressed"]
